# InfiniTimeDataExtractor

./: CMakeLists.txt  infinitime_services_and_uuids.txt  readme.md
src/: csv_handler.cpp  csv_handler.hpp  data_extractor.cpp  data_extractor.hpp  extracting_values_test.cpp  main.cpp  pinetime_communicator.cpp  pinetime_communicator.hpp
utils/: plotsensors.py
